--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxyConfig=proxy.config.json",
     "build": "ng build --base-href=/register-printer --deploy-url=/register-printer/",
     "test": "ng test",
     "lint": "ng lint",
