--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:electron": "ng build --base-href=. && electron ."
+    "start:electron": "ng build --base-href=. && electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +40,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "electron": "^8.2.0",
+    "electron-builder": "^22.4.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -49,5 +52,17 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
+  },
+  "build": {
+    "appId": "com.anteestudio.registerprinter",
+    "asar": false,
+    "files": [
+      "index.js",
+      "dist/register-printer-frontend/**/*",
+      "app/*"
+    ],
+    "win": {
+      "target": "zip"
+    }
   }
 }
