--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/platform-browser": "^9.0.1",
     "@angular/platform-browser-dynamic": "^9.0.1",
     "@angular/router": "^9.0.1",
+    "electron-is-dev": "^1.1.0",
+    "electron-log": "^4.1.1",
+    "electron-updater": "^4.2.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -62,8 +65,12 @@
       "app/*"
     ],
     "win": {
-      "target": "portable",
+      "target": "nsis",
       "icon": "registerPrinter.ico"
+    },
+    "publish": {
+      "provider": "generic",
+      "url": "http://zhangyiant.oicp.net:9000"
     }
   }
 }
