--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "register-printer-frontend",
   "version": "0.2.4-0",
+  "author": "antee",
+  "description": "A UI tool to generate Register related codes.",
   "main": "index.js",
   "scripts": {
     "ng": "ng",
