--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron-is-dev": "^1.1.0",
     "electron-log": "^4.1.1",
     "electron-updater": "^4.2.5",
+    "lodash": "^4.17.20",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -42,6 +43,7 @@
     "@angular/language-service": "^10.0.9",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "electron": "^9.2.0",
