--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^10.0.9",
     "@angular/platform-browser-dynamic": "^10.0.9",
     "@angular/router": "^10.0.9",
+    "angular-split": "^5.0.0",
     "electron-is-dev": "^1.1.0",
     "electron-log": "^4.1.1",
     "electron-updater": "^4.2.5",
