--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "build": {
     "appId": "com.anteestudio.registerprinter",
