Update workspace package name.

--- a/packages/register-printer/package.json
+++ b/packages/register-printer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "register-printer",
+  "name": "@antee/register-printer",
   "version": "1.0.0",
   "description": "RegisterPrinter data model",
   "main": "index.js",
