--- a/packages/register-printer/package.json
+++ b/packages/register-printer/package.json
@@ -4,7 +4,7 @@
   "description": "RegisterPrinter data model",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/zhangyiant/register-printer-frontend#readme",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "install": "^0.13.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
 }
