--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "ng serve --proxyConfig=proxy.config.json",
     "build": "ng build --base-href=.",
     "test": "ng test",
+    "test2": "npm run test -w packages/register-printer",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start:electron": "tsc --build tsconfig.electron.json && webpack --config webpack.config.preload.js && ng build --base-href=. && electron .",
