--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm install -w packages/register-printer
+    - run: npm ci --workspaces
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm test --workspaces
