Update tsconfig and package.json for register-printer workspace.

--- a/packages/register-printer/package.json
+++ b/packages/register-printer/package.json
@@ -2,7 +2,8 @@
   "name": "@antee/register-printer",
   "version": "1.0.0",
   "description": "RegisterPrinter data model",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "jest"
   },
