Update start:electron script.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run test -w packages/register-printer",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:electron": "tsc --build tsconfig.electron.json && webpack --config webpack.config.preload.js && ng build --base-href=. && electron .",
+    "start:electron": "npm run build -w packages/register-printer && tsc --build tsconfig.electron.json && webpack --config webpack.config.preload.js && ng build --base-href=. && electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
