--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,7 @@ jobs:
       run: npm ci
       working-directory: ./packages/register-printer
     - run: npm run build --if-present
+    - run: npm run test2 --no-watch --no-progress --browsers=ChromeHeadlessCI
     - name: Run test in register-printer workspace
       run: npm test
       working-directory: ./packages/register-printer
