--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,10 +27,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install dependences
-      run: npm ci
+      run: npm install
     - name: Install dependencies in register-printer workspace
-      run: npm ci
+      run: npm install
       working-directory: ./packages/register-printer
+    - run: npm run build -w packages/register-printer
     - run: npm run build --if-present
     - run: npm run test2 --no-watch --no-progress --browsers=ChromeHeadlessCI
     - name: Run test in register-printer workspace
