--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
       working-directory: ./packages/register-printer
     - run: npm run build -w packages/register-printer
     - run: npm run build --if-present
-    - run: npm run test2 --no-watch --no-progress --browsers=ChromeHeadlessCI
+    - run: npm run test2 -- --no-watch --no-progress --browsers=ChromeHeadlessCI
     - name: Run test in register-printer workspace
       run: npm test
       working-directory: ./packages/register-printer
