--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [16.14.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependences
       run: npm install
     - name: Install dependencies in register-printer workspace
-      run: npm install
+      run: pwd && npm install
       working-directory: ./packages/register-printer
     - run: npm run build -w packages/register-printer
     - run: npm run build --if-present
