--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,9 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install dependences
-      run: npm install
+      run: npm ci
     - name: Install dependencies in register-printer workspace
-      run: pwd && npm install
+      run: npm ci
       working-directory: ./packages/register-printer
     - run: npm run build -w packages/register-printer
     - run: npm run build --if-present
