--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Install dependencies in register-printer workspace
       run: npm ci
       working-directory: ./packages/register-printer
+    - run: npm run lint
     - run: npm run build -w packages/register-printer
     - run: npm run build --if-present
     - run: npm run test2 -- --no-watch --no-progress --browsers=ChromeHeadlessCI
