--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build": "ng build --base-href=.",
     "test2": "ng test",
     "test": "npm run test -w packages/register-printer",
-    "lint": "ng lint",
     "e2e": "ng e2e",
     "start:electron": "npm run build -w packages/register-printer && tsc --build tsconfig.electron.json && webpack --config webpack.config.preload.js && ng build --base-href=. && electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +39,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
+    "@angular-eslint/builder": "13.2.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
     "@angular/cli": "^13.3.3",
     "@angular/compiler-cli": "^13.3.3",
     "@angular/language-service": "^13.3.3",
@@ -46,9 +51,12 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.15.3",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "codelyzer": "^6.0.0",
     "electron": "^18.0.0",
     "electron-builder": "^23.0.3",
+    "eslint": "^8.12.0",
     "jasmine-core": "~3.10.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
