--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@typescript-eslint/parser": "5.17.0",
     "codelyzer": "^6.0.0",
     "electron": "^18.0.0",
-    "electron-builder": "^23.0.3",
+    "electron-builder": "23.0.6",
     "eslint": "^8.12.0",
     "jasmine-core": "~3.10.0",
     "jasmine-spec-reporter": "~5.0.0",
