Update to Angular 18. (#43)
* Update to angular 17.

* Update @angular/material to 17.

* Update typescript to 5.4.

* Update angular to 18.

* Update @angular/material to 18.

* Update index.ts.

* Update github workflow node version to 20.10.

* Remove npm run lint.

--- a/angular.json
+++ b/angular.json
@@ -15,12 +15,15 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/register-printer-frontend",
+            "outputPath": {
+              "base": "dist/register-printer-frontend"
+            },
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "src/polyfills.ts"
+            ],
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
@@ -31,7 +34,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "browser": "src/main.ts"
           },
           "configurations": {
             "production": {
@@ -47,8 +51,6 @@
               "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -67,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "register-printer-frontend:build"
+            "buildTarget": "register-printer-frontend:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "register-printer-frontend:build:production"
+              "buildTarget": "register-printer-frontend:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "register-printer-frontend:build"
+            "buildTarget": "register-printer-frontend:build"
           }
         },
         "test": {
